; ModuleID = '/home/carl/AnghaBench/vlc/test/modules/packetizer/extr_hxxx.c_test_iterators.c'
source_filename = "/home/carl/AnghaBench/vlc/test/modules/packetizer/extr_hxxx.c_test_iterators.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"INPUT SET    : \00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"0x%.2x, \00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"Test with prefix len %d:\0A\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"NAL %d \00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c", returns %d != %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32**, i64*)* @test_iterators to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_iterators(i32* %0, i64 %1, i32** %2, i64* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i64, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32** %2, i32*** %7, align 8
  store i64* %3, i64** %8, align 8
  %23 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* %9, align 8
  br label %24

24:                                               ; preds = %34, %4
  %25 = load i64, i64* %9, align 8
  %26 = load i64, i64* %6, align 8
  %27 = icmp ult i64 %25, %26
  br i1 %27, label %28, label %37

28:                                               ; preds = %24
  %29 = load i32*, i32** %5, align 8
  %30 = load i64, i64* %9, align 8
  %31 = getelementptr inbounds i32, i32* %29, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %32)
  br label %34

34:                                               ; preds = %28
  %35 = load i64, i64* %9, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* %9, align 8
  br label %24

37:                                               ; preds = %24
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %10, align 4
  br label %39

39:                                               ; preds = %127, %37
  %40 = load i32, i32* %10, align 4
  %41 = icmp ult i32 %40, 3
  br i1 %41, label %42, label %130

42:                                               ; preds = %39
  %43 = load i32**, i32*** %7, align 8
  %44 = load i32, i32* %10, align 4
  %45 = zext i32 %44 to i64
  %46 = getelementptr inbounds i32*, i32** %43, i64 %45
  %47 = load i32*, i32** %46, align 8
  store i32* %47, i32** %11, align 8
  %48 = load i64*, i64** %8, align 8
  %49 = load i32, i32* %10, align 4
  %50 = zext i32 %49 to i64
  %51 = getelementptr inbounds i64, i64* %48, i64 %50
  %52 = load i64, i64* %51, align 8
  store i64 %52, i64* %12, align 8
  %53 = load i32, i32* %10, align 4
  %54 = shl i32 1, %53
  %55 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0), i32 %54)
  %56 = load i32*, i32** %5, align 8
  %57 = load i64, i64* %6, align 8
  %58 = call i32 @hxxx_iterator_init(i32* %13, i32* %56, i64 %57, i32 0)
  %59 = load i32*, i32** %11, align 8
  %60 = load i64, i64* %12, align 8
  %61 = load i32, i32* %10, align 4
  %62 = shl i32 1, %61
  %63 = call i32 @hxxx_iterator_init(i32* %14, i32* %59, i64 %60, i32 %62)
  store i32 1, i32* %19, align 4
  store i32 1, i32* %20, align 4
  store i32 0, i32* %21, align 4
  br label %64

64:                                               ; preds = %124, %42
  %65 = load i32, i32* %19, align 4
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %70

67:                                               ; preds = %64
  %68 = load i32, i32* %20, align 4
  %69 = icmp ne i32 %68, 0
  br label %70

70:                                               ; preds = %67, %64
  %71 = phi i1 [ false, %64 ], [ %69, %67 ]
  br i1 %71, label %72, label %125

72:                                               ; preds = %70
  store i32* null, i32** %15, align 8
  store i32* null, i32** %17, align 8
  %73 = call i32 @hxxx_annexb_iterate_next(i32* %13, i32** %15, i64* %16)
  store i32 %73, i32* %19, align 4
  %74 = call i32 @hxxx_iterate_next(i32* %14, i32** %17, i64* %18)
  store i32 %74, i32* %20, align 4
  %75 = load i32, i32* %21, align 4
  %76 = add nsw i32 %75, 1
  store i32 %76, i32* %21, align 4
  %77 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i32 %75)
  %78 = load i32, i32* %19, align 4
  %79 = load i32, i32* %20, align 4
  %80 = icmp ne i32 %78, %79
  br i1 %80, label %81, label %85

81:                                               ; preds = %72
  %82 = load i32, i32* %19, align 4
  %83 = load i32, i32* %20, align 4
  %84 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i32 %82, i32 %83)
  br label %85

85:                                               ; preds = %81, %72
  %86 = load i32, i32* %19, align 4
  %87 = load i32, i32* %20, align 4
  %88 = icmp eq i32 %86, %87
  %89 = zext i1 %88 to i32
  %90 = call i32 @assert(i32 %89)
  %91 = load i32, i32* %19, align 4
  %92 = icmp ne i32 %91, 0
  br i1 %92, label %93, label %124

93:                                               ; preds = %85
  %94 = load i32, i32* %20, align 4
  %95 = icmp ne i32 %94, 0
  br i1 %95, label %96, label %124

96:                                               ; preds = %93
  %97 = load i64, i64* %16, align 8
  %98 = load i64, i64* %18, align 8
  %99 = icmp eq i64 %97, %98
  %100 = zext i1 %99 to i32
  %101 = call i32 @assert(i32 %100)
  %102 = load i32*, i32** %15, align 8
  %103 = load i32*, i32** %17, align 8
  %104 = load i64, i64* %16, align 8
  %105 = call i64 @memcmp(i32* %102, i32* %103, i64 %104)
  %106 = icmp eq i64 %105, 0
  %107 = zext i1 %106 to i32
  %108 = call i32 @assert(i32 %107)
  store i64 0, i64* %22, align 8
  br label %109

109:                                              ; preds = %119, %96
  %110 = load i64, i64* %22, align 8
  %111 = load i64, i64* %16, align 8
  %112 = icmp ult i64 %110, %111
  br i1 %112, label %113, label %122

113:                                              ; preds = %109
  %114 = load i32*, i32** %15, align 8
  %115 = load i64, i64* %22, align 8
  %116 = getelementptr inbounds i32, i32* %114, i64 %115
  %117 = load i32, i32* %116, align 4
  %118 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %117)
  br label %119

119:                                              ; preds = %113
  %120 = load i64, i64* %22, align 8
  %121 = add i64 %120, 1
  store i64 %121, i64* %22, align 8
  br label %109

122:                                              ; preds = %109
  %123 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  br label %124

124:                                              ; preds = %122, %93, %85
  br label %64

125:                                              ; preds = %70
  %126 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  br label %127

127:                                              ; preds = %125
  %128 = load i32, i32* %10, align 4
  %129 = add i32 %128, 1
  store i32 %129, i32* %10, align 4
  br label %39

130:                                              ; preds = %39
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @hxxx_iterator_init(i32*, i32*, i64, i32) #1

declare dso_local i32 @hxxx_annexb_iterate_next(i32*, i32**, i64*) #1

declare dso_local i32 @hxxx_iterate_next(i32*, i32**, i64*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @memcmp(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
